--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,51 @@
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 1440px;
+  height: 118px;
+  left: 20px;
+  top: 20px;
+  background-color: blueviolet; /*#007BFF*/
+}
+
+.header-items {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin:100px;
+}
+
+
+
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 0.1s linear;
   }
-}
+} */
 
-.App-header {
-  background-color: #282c34;
+/* .App-header {
+  background-color: #fbfbfb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(5, 0, 0);
 }
 
 .App-link {
@@ -40,4 +64,6 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */ 
+
+
