--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,83 @@
+.App {
+  height:100vh;
+  
+}
+
 .header-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 1440px;
-  height: 118px;
-  left: 20px;
-  top: 20px;
-  background-color: blueviolet; /*#007BFF*/
+  width: 100%;
+  height: 70px;
+  background-color: rgb(145, 61, 223); /*#007BFF*/
+}
+
+.header-content-right {
+  flex: 30%;
+  align-items: center;
+  margin-right: 200px;
+  
+}
+.header-content-left {
+  flex: 70%;
+  align-items: center;
 }
 
 .header-items {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   align-items: center;
-  margin:100px;
+  justify-content: space-between;
+  list-style: none;
+  color: white;
+
+}
+
+.content-container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+.content-column-one {
+  flex: 20%;
+  border-right: 0.5px solid black ;
+  padding: 20px;
+
+  }
+
+.content-column-two {
+  flex: 80%;
+  padding-left: 60px;
+
 }
 
 
-
-.App {
+.menu {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  
+  
+  
+}
+.menu-list {
+  margin-top: 50px;
+  padding: 0;
+  list-style: none;
+  font-size: 20px;
+  align-items: flex-start;
+  
 }
 
-.App-logo {
-  height: 20vmin;
-  pointer-events: none;
+.menu-item {
+  margin-bottom: 25px;
 }
+
+
+
+
+
+
 
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
