--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,39 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 1440px;
-  height: 118px;
-  left: 20px;
-  top: 20px;
-  background-color: blueviolet; /*#007BFF*/
+  width: 100%;
+  height: 70px;
+  background-color: #007BFF; /*#007BFF*/
+}
+.header-content-right {
+  flex: 30%;
+  align-items: center;
+  margin-right: 200px;
+
+
+}
+
+.header-content-left {
+  flex: 70%;
+  align-items: center;
+  margin-right: 200px;
+  
+
 }
 
 .header-items {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   align-items: center;
-  margin:100px;
+  justify-content: space-between;
+  list-style: none;
+  color: white;
+
 }
 
 
 
-.App {
+.start-page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,6 +46,41 @@
   height: 20vmin;
   pointer-events: none;
 }
+
+.content-container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 100%
+}
+
+.content-column-1 {
+  flex: 20%;
+  border-right: 0.5px solid black;
+  padding: 20px;
+}
+
+.content-column-2 {
+  flex: 80%;
+  padding-left: 60px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-list {
+  margin-top: 50px;
+  padding: 0;
+  list-style: none;
+  font-size: 20px;
+  align-items: flex-start;
+}
+.menu-item {
+  margin-bottom: 25px;
+}
+
 
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
