--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,9 @@
 .start-page {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* text-align: center; */
 }
 
 .App-logo {
