--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   align-items: center;
   width: 100%;
   height: 70px;
-  background-color: #007BFF; /*#007BFF*/
+  background-color: #0065BD;
+  font-family: 'font-regular', Fallback, sans-serif;
 }
 .header-content-right {
   flex: 30%;
@@ -62,7 +63,7 @@
 
 .content-column-2 {
   flex: 80%;
-  padding-left: 60px;
+  
 }
 
 .menu {
