change the style of link element with button, removing underline and clickable empty space

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body {
 
 @import url('https://fonts.googleapis.com/css2?family=Hind+Guntur&display=swap');
 
+a.button {
+  text-decoration: none;
+  display: inline-block;
+}
 
 .header {
   display: flex;
