--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,43 @@ body {
 
 @import url('https://fonts.googleapis.com/css2?family=Hind+Guntur&display=swap');
 
+@media screen and (max-height: 700px) {
+  .header {
+  display: flex;
+  flex-direction: row;
+  flex: 0 0 100%;
+  align-items: center;
+  justify-content: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 100%;
+  height: 80px;
+
+  background-color: #0065BD;}
+
+  .header-container {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+  }
+
+  .header-items {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    color: white;
+  }
+  
+  .header-items li {
+    margin-right: 0px;
+  }
+}
+
 
 .header {
   display: flex;
@@ -108,6 +145,20 @@ body {
   
 }
 
+@media screen and (max-width: 1000px) {
+  .content-column-1 {
+    display: none;
+    width: 20%;
+    height: 100%;
+    border-right: 0.5px solid #DDDDDD;
+  }
+  
+  .content-column-2 {
+    width: 100%;
+    
+  }
+}
+
 .menu {
   display: flex;
   flex-direction: column;
@@ -120,11 +171,13 @@ body {
   display: block;
   width: 100%;
 }
+
 .menu-item {
   padding: 16px 24px 11px 24px;
   min-width: 80%;
   text-align: center;
 }
+
 .menu-item::after {
   content: '';
   display: inline-block;
@@ -136,7 +189,13 @@ body {
   width: 12px;
   height: 12px;
   left: 25%;
+}
 
+@media (max-width: 1000px) {
+  .menu {
+    display: none;}
+
+  
 }
 
 .logo-wrapper {
