--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,16 @@ body {
 }
 #root {
   height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Hind+Guntur&display=swap');
 
-<<<<<<< HEAD
 a.button {
   text-decoration: none;
   display: inline-block;
 }
-=======
 @media screen and (max-height: 700px) {
   .header {
   display: flex;
@@ -50,8 +50,6 @@ a.button {
     margin-right: 0px;
   }
 }
-
->>>>>>> main
 
 .header {
   display: flex;
@@ -149,7 +147,7 @@ a.button {
 
 .content-column-2 {
   width: 80%;
-  
+
 }
 
 @media screen and (max-width: 1000px) {
